Add oo_merge_hostvars filter for merging host & play variables.

--- a/roles/openshift_hosted_facts/tasks/main.yml
+++ b/roles/openshift_hosted_facts/tasks/main.yml
@@ -2,8 +2,6 @@
 - name: Set hosted facts
   openshift_facts:
     role: hosted
-    openshift_env: "{{ hostvars[inventory_hostname]
-                       | oo_merge_dicts(vars if (ansible_version.full
-                                                 | version_compare('2.0', 'ge')
-                                                 | bool) else hostvars)
+    openshift_env: "{{ hostvars
+                       | oo_merge_hostvars(vars, inventory_hostname)
                        | oo_openshift_env }}"
