--- a/roles/openshift_builddefaults/tasks/main.yml
+++ b/roles/openshift_builddefaults/tasks/main.yml
@@ -4,10 +4,8 @@
     role: builddefaults
     # TODO: add ability to define builddefaults env vars sort of like this
     # may need to move the config generation to a filter however.
-    # openshift_env: "{{ hostvars[inventory_hostname]
-    #                    | oo_merge_dicts(vars if (ansible_version.full
-    #                                              | version_compare('2.0', 'ge')
-    #                                              | bool) else hostvars)
+    # openshift_env: "{{ hostvars
+    #                    | oo_merge_hostvars(vars, inventory_hostname)
     #                    | oo_openshift_env }}"
     # openshift_env_structures:
     # - 'openshift.builddefaults.env.*'
