--- a/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/upgrade.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/upgrade.yml
@@ -43,6 +43,7 @@
   - include: ../../../../../roles/openshift_master/handlers/main.yml
   roles:
   - openshift_facts
+  - { role: openshift_cli, openshift_image_tag: "v{{ g_new_version }}" }
   tasks:
   - include: rpm_upgrade.yml component=master
     when: not openshift.common.is_containerized | bool
