--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -76,6 +76,7 @@
     regexp: '^{{ item.reg_conf_var }}=.*$'
     line: "{{ item.reg_conf_var }}='{{ item.reg_fact_val }}'"
     state: "{{ 'present' if item.reg_fact_val != '' else 'absent'}}"
+  when: docker_check.stat.isreg
   with_items:
     - reg_conf_var: HTTP_PROXY
       reg_fact_val: "{{ docker_http_proxy | default('') }}"
