Separate docker installation/versioning from sysconfig.
Break logic out for re-use, allowing us to make sure
/etc/sysconfig/docker is updated without running the risk of
upgrading/downgrading docker versions.

Add a call to the docker role most places we call openshift_docker to
ensure the change does not introduce problems. Pre-upgrade however does
not require this.

--- a/playbooks/common/openshift-master/scaleup.yml
+++ b/playbooks/common/openshift-master/scaleup.yml
@@ -49,6 +49,7 @@
     docker_blocked_registries: "{{ lookup('oo_option', 'docker_blocked_registries') | oo_split }}"
   roles:
   - openshift_facts
+  - docker
   - openshift_docker
 
 - include: ../openshift-master/config.yml
