--- a/roles/openshift_cli/meta/main.yml
+++ b/roles/openshift_cli/meta/main.yml
@@ -12,6 +12,7 @@ galaxy_info:
   categories:
   - cloud
 dependencies:
+- role: docker
 - role: openshift_docker
 - role: openshift_common
 - role: openshift_cli_facts
