--- a/playbooks/common/openshift-node/scaleup.yml
+++ b/playbooks/common/openshift-node/scaleup.yml
@@ -14,6 +14,7 @@
     docker_blocked_registries: "{{ lookup('oo_option', 'docker_blocked_registries') | oo_split }}"
   roles:
   - openshift_facts
+  - docker
   - openshift_docker
 
 - include: ../openshift-node/config.yml
