--- a/playbooks/byo/openshift-cluster/upgrades/v3_1_to_v3_2/upgrade.yml
+++ b/playbooks/byo/openshift-cluster/upgrades/v3_1_to_v3_2/upgrade.yml
@@ -4,6 +4,10 @@
   become: no
   gather_facts: no
   tasks:
+  - name: Verify Ansible version is greater than or equal to 1.9.4 and less than 2.0
+    fail:
+      msg: "Unsupported ansible version: {{ ansible_version }} found."
+    when: ansible_version.full | version_compare('1.9.4', 'lt') or ansible_version.full | version_compare('2.0', 'ge')
   - include_vars: ../../../../byo/openshift-cluster/cluster_hosts.yml
   - add_host:
       name: "{{ item }}"
