--- a/inventory/byo/hosts.origin.example
+++ b/inventory/byo/hosts.origin.example
@@ -196,6 +196,9 @@ openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 
 # openshift_master_access_token_max_seconds=86400
 # openshift_master_auth_token_max_seconds=500
 
+# Override master servingInfo.maxRequestsInFlight
+#openshift_master_max_requests_inflight=500
+
 # default storage plugin dependencies to install, by default the ceph and
 # glusterfs plugin dependencies will be installed, if available.
 #osn_storage_plugin_deps=['ceph','glusterfs','iscsi']
