--- a/roles/openshift_cli/meta/main.yml
+++ b/roles/openshift_cli/meta/main.yml
@@ -12,6 +12,6 @@ galaxy_info:
   categories:
   - cloud
 dependencies:
-- { role: openshift_docker, upgrading: "{{ upgrading | default(False) }}" }
+- role: openshift_docker
 - role: openshift_common
 - role: openshift_cli_facts
