--- a/playbooks/common/openshift-cluster/upgrades/v3_0_to_v3_1/upgrade.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_0_to_v3_1/upgrade.yml
@@ -569,6 +569,7 @@
   # Update the existing templates
   - role: openshift_examples
     openshift_examples_import_command: replace
+    registry_url: "{{ openshift.master.registry_url }}"
   pre_tasks:
   - name: Collect all routers
     command: >
