--- a/roles/openshift_examples/tasks/main.yml
+++ b/roles/openshift_examples/tasks/main.yml
@@ -4,6 +4,11 @@
     src: "examples/{{ content_version }}/"
     dest: "{{ examples_base }}/"
 
+- name: Modify registry paths if registry_url is not registry.access.redhat.com
+  shell: >
+    find {{ examples_base }} -type f | xargs -n 1 sed -i 's|registry.access.redhat.com|{{ registry_host | quote }}|g'
+  when: registry_host != ''
+
 # RHEL and Centos image streams are mutually exclusive
 - name: Import RHEL streams
   command: >
