--- a/roles/openshift_cli/tasks/main.yml
+++ b/roles/openshift_cli/tasks/main.yml
@@ -6,6 +6,7 @@
   action: "{{ ansible_pkg_mgr }} name={{ openshift.common.service_type }}-clients state=present"
   when: not openshift.common.is_containerized | bool
 
+# TODO: handle no openshift_version set?
 - name: Pull CLI Image
   command: >
     docker pull {{ openshift.common.cli_image }}:v{{ openshift_version }}
