--- a/roles/openshift_docker_facts/tasks/main.yml
+++ b/roles/openshift_docker_facts/tasks/main.yml
@@ -57,6 +57,8 @@
     l_common_version: "{{ common_version.stdout | default('0.0', True) }}"
   when: not openshift.common.is_containerized | bool
 
+- debug: var=l_common_version
+
 - name: Set docker version to be installed
   set_fact:
     docker_version: "{{ '1.8.2' }}"
@@ -68,3 +70,5 @@
     docker_version: "{{ '1.9.1' }}"
   when: " ( l_common_version | version_compare('3.2','>') and openshift.common.service_type == 'atomic-openshift' ) or
           ( l_common_version | version_compare('1.2','>') and openshift.common.service_type == 'origin' )"
+
+- debug: var=docker_version
